# Plasma-Pusher

./: .gitignore  CMakeLists.txt  LICENSE
src/: Constants_and_Kinds.f90  Double_Leap_Frog.f90  External_Fields.f90  First_Integration.f90  Get_Unit_Number.f90  Global_Variables.f90  Initialization.f90  Main.f90  Makefile.deps  Plot_Data.py  Plot_and_Save.f90  Vector_Operations.f90  ini_file_parser.f90  input.ini
